# moodle-evalbox

./: .gitignore  README.md  pyproject.toml
moodle_evalbox/: cli.py  evalbox.py  files.py  models.py  moodle.py  utils.py
tests/: test_evalbox.py  test_files.py  test_moodle.py  test_moodle_evalbox.py  test_utils.py
