[tool.poetry]
name = "moodle-evalbox"
version = "0.1.0"
description = "Simple CLI to translate Moodle evaluation quizz XML file into [Evalbox](https://evalbox.fr/) import file"
authors = ["Vincent Vatelot <vincent.vatelot@itsonus.fr>"]
readme="README.md"

[tool.poetry.scripts]
convert-moodle-file = "moodle_evalbox.cli:app"

[tool.poetry.dependencies]
python = "^3.8"
xmltodict = "^0.12.0"
typer = "^0.3.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^20.8b1", allow-prereleases = true}
typer-cli = "^0.0.11"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
